working, thanks kematzy

--- a/README
+++ b/README
@@ -1,31 +1,1 @@
-This app was extracted from another sinatra app that I'd like to get working with Compass.
-
-== my environment ==
-
-sinatra (0.9.1.1)
-haml (2.1.0)
-chriseppstein-compass (0.5.3)
-
-# haml -v
-  Haml 2.1.0.1ee16d0
-# sass -v
-  Haml 2.1.0.1ee16d0
-# compass -v
-  Compass 0.5.3
-  Copyright (c) 2008 Chris Eppstein
-  Released under the MIT License.
-
-== error ==
-
-NameError - uninitialized constant Haml::Engine
-
-app.rb:18:in `GET /'
-/Users/me/.gem/ruby/1.8/gems/rack-0.9.1/lib/rack/methodoverride.rb:24:in `call'
-/Users/me/.gem/ruby/1.8/gems/rack-0.9.1/lib/rack/commonlogger.rb:20:in `_call'
-/Users/me/.gem/ruby/1.8/gems/rack-0.9.1/lib/rack/commonlogger.rb:13:in `call'
-/Users/me/.gem/ruby/1.8/gems/rack-0.9.1/lib/rack/handler/thin.rb:11:in `run'
-app.rb:17
-
-Params
-
-{}
+This app is a simple starting point for those wanting to explore compass with sinatra.
